--- a/firstProject/css/style.css
+++ b/firstProject/css/style.css
@@ -10,10 +10,13 @@ body {
 }
 
 .header {
+  position: sticky;
+  top: 1px;
   padding: 30px 0 25px;
   display: flex;
   justify-content: space-between;
   border-bottom: 2px solid rgba(203, 203, 203, 1);
+  background-color: rgba(249, 249, 249, 1);
 }
 
 .header__logo {
@@ -55,6 +58,10 @@ button {
   border: none;
 }
 
+button:hover {
+  cursor: pointer;
+}
+
 .purpleButton {
   background-color: rgba(108, 95, 188, 1);
   color: rgba(249, 249, 249, 1);
@@ -63,4 +70,141 @@ button {
 .whiteButton {
   background-color: rgba(249, 249, 249, 1);
   color: rgba(96, 96, 96, 1);
+  border: 1.5px solid rgba(108, 95, 188, 1);
+}
+
+.application {
+  padding-top: 100px;
+}
+
+.section__box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.box_left {
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+}
+
+.left_user {
+  display: flex;
+}
+
+.user_text {
+  color: rgba(32, 31, 31, 0.2);
+  font-weight: 600;
+  font-size: 15px;
+  line-height: 18px;
+  letter-spacing: 2px;
+}
+
+.left_content {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  max-width: 567px;
+}
+
+.content_title {
+  font-weight: 600;
+  font-size: 75px;
+  line-height: 90px;
+  letter-spacing: -3px;
+}
+
+purple {
+  color: rgba(92, 78, 174, 1);
+}
+
+.content_subtitle {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 28px;
+  color: rgba(103, 103, 103, 1);
+  opacity: 70%;
+}
+
+.left_buttons {
+  display: flex;
+  gap: 18px;
+}
+
+.left_rating {
+  display: flex;
+}
+
+.rating_text {
+  padding-top: 5px;
+  color: rgba(51, 65, 85, 1);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+}
+
+#rating_stars {
+  margin: 0 10px 0 20px;
+}
+
+.box_right {
+  position: relative;
+}
+
+.card {
+  display: flex;
+  width: 329px;
+  height: 90px;
+  position: absolute;
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 1);
+  box-shadow: -10px 5px 5px rgba(70, 70, 70, 0.05);
+  right: 0;
+  top: 0;
+  padding: 10px 10px 0 10px;
+}
+
+.card img {
+  width: 74px;
+  margin-right: 10px;
+}
+
+.card_picture {
+}
+
+.card_text {
+  display: block;
+  width: 100%;
+}
+
+.card_title {
+  display: block;
+  margin-bottom: 10px;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 22px;
+  letter-spacing: 0px;
+  text-align: left;
+}
+
+.card_subtitle {
+  display: block;
+  margin-bottom: 10px;
+  font-size: 10px;
+  font-weight: 500;
+  line-height: 14px;
+  letter-spacing: 0px;
+  text-align: left;
+}
+
+.card_time {
+  display: block;
+  text-align: end;
+  align-items: end;
+  width: auto;
+  font-size: 11px;
+  font-weight: 500;
+  line-height: 15px;
+  letter-spacing: 0px;
 }
