--- a/firstProject/css/style.css
+++ b/firstProject/css/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: "Inter", sans-serif;
   font-weight: 500;
-  background-color: rgba(249, 249, 249, 1);
+  background-color: rgb(249, 249, 249);
 }
 
 .container {
@@ -11,37 +11,57 @@ body {
 
 .header {
   position: sticky;
-  top: 1px;
+  top: 0px;
   padding: 30px 0 25px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  border-bottom: 2px solid rgba(203, 203, 203, 1);
-  background-color: rgba(249, 249, 249, 1);
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  border-bottom: 2px solid rgb(203, 203, 203);
+  background-color: rgb(249, 249, 249);
+  z-index: 9999;
 }
 
 .header__logo {
   font-weight: 600;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .logo_text {
   padding-left: 11px;
   font-size: 21px;
-  color: rgba(108, 95, 188, 1);
+  color: rgb(108, 95, 188);
 }
 
 .header__navigation {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  flex: 1 1 auto;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
 }
 
 .navigation_buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   gap: 30px;
-  color: rgba(96, 96, 96, 1);
+  color: rgb(96, 96, 96);
   list-style-type: none;
   font-size: 18px;
   padding-left: 30px;
@@ -54,7 +74,7 @@ button {
   height: 63px;
   border-radius: 17px;
   font-size: 17px;
-  color: rgba(249, 249, 249, 1);
+  color: rgb(249, 249, 249);
   border: none;
 }
 
@@ -63,14 +83,14 @@ button:hover {
 }
 
 .purpleButton {
-  background-color: rgba(108, 95, 188, 1);
-  color: rgba(249, 249, 249, 1);
+  background-color: rgb(108, 95, 188);
+  color: rgb(249, 249, 249);
 }
 
 .whiteButton {
-  background-color: rgba(249, 249, 249, 1);
-  color: rgba(96, 96, 96, 1);
-  border: 1.5px solid rgba(108, 95, 188, 1);
+  background-color: rgb(249, 249, 249);
+  color: rgb(96, 96, 96);
+  border: 1.5px solid rgb(108, 95, 188);
 }
 
 .application {
@@ -78,18 +98,30 @@ button:hover {
 }
 
 .section__box {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .box_left {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   gap: 50px;
 }
 
 .left_user {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -102,8 +134,13 @@ button:hover {
 }
 
 .left_content {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   gap: 16px;
   max-width: 567px;
 }
@@ -116,29 +153,33 @@ button:hover {
 }
 
 purple {
-  color: rgba(92, 78, 174, 1);
+  color: rgb(92, 78, 174);
 }
 
 .content_subtitle {
   font-weight: 500;
   font-size: 18px;
   line-height: 28px;
-  color: rgba(103, 103, 103, 1);
+  color: rgb(103, 103, 103);
   opacity: 70%;
 }
 
 .left_buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   gap: 18px;
 }
 
 .left_rating {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
 .rating_text {
   padding-top: 5px;
-  color: rgba(51, 65, 85, 1);
+  color: rgb(51, 65, 85);
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
@@ -153,13 +194,16 @@ purple {
 }
 
 .card {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 329px;
   height: 90px;
   position: absolute;
   border-radius: 10px;
-  background-color: rgba(255, 255, 255, 1);
-  box-shadow: -10px 5px 5px rgba(70, 70, 70, 0.05);
+  background-color: rgb(255, 255, 255);
+  -webkit-box-shadow: -10px 5px 5px rgba(70, 70, 70, 0.05);
+          box-shadow: -10px 5px 5px rgba(70, 70, 70, 0.05);
   right: 0;
   top: 0;
   padding: 10px 10px 0 10px;
@@ -168,9 +212,6 @@ purple {
 .card img {
   width: 74px;
   margin-right: 10px;
-}
-
-.card_picture {
 }
 
 .card_text {
@@ -201,10 +242,145 @@ purple {
 .card_time {
   display: block;
   text-align: end;
-  align-items: end;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: end;
   width: auto;
   font-size: 11px;
   font-weight: 500;
   line-height: 15px;
   letter-spacing: 0px;
+}
+
+.card_background {
+  position: absolute;
+  z-index: -1;
+  left: 20px;
+  top: -10px;
+}
+
+.features {
+  margin-top: 85px;
+  background-image: url(/firstProject/images/BG.svg);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.features__box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  height: 220.5px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.features_item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  max-width: 220px;
+  gap: 11px;
+}
+.features_item:nth-child(2) {
+  border-left: 1px solid rgb(197, 197, 197);
+  border-right: 1px solid rgb(197, 197, 197);
+  padding: 0 66px;
+}
+
+.features_title {
+  font-weight: 700;
+  font-size: 43px;
+  line-height: 54px;
+  text-align: center;
+  color: rgb(255, 255, 255);
+}
+
+.features_subtitle {
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 21px;
+  text-align: center;
+  color: rgb(197, 191, 237);
+}
+
+.application__box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  padding-bottom: 120px;
+  border-bottom: 1px solid rgb(203, 203, 203);
+}
+
+.application_right {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  max-width: 500px;
+  max-height: 550px;
+}
+
+.application_right_title {
+  font-weight: 700;
+  font-size: 52px;
+  line-height: 59px;
+}
+
+.application_right_list {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 30px;
+  color: rgb(103, 103, 103);
+  gap: 28px;
+  display: grid;
+}
+
+.application_right_more {
+  position: relative;
+  left: -20%;
+}
+
+.application_right_more_vector {
+  position: relative;
+  top: 70%;
+  left: -10%;
+}
+
+.restaurants_header {
+  padding: 100px 0;
+  text-align: center;
+}
+
+.header_top {
+  font-weight: 600;
+  font-size: 45px;
+  line-height: 26px;
+}
+
+.restaurants_list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
