--- a/firstProject/css/style.scss
+++ b/firstProject/css/style.scss
@@ -38,6 +38,11 @@ body {
   flex: 1 1 auto;
 }
 
+.header__link {
+  color: inherit;
+  text-decoration: none;
+}
+
 .navigation_buttons {
   display: flex;
   flex-direction: row;
@@ -78,7 +83,7 @@ button:hover {
   padding-top: 100px;
 }
 
-.section__box {
+.section__inner {
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -171,9 +176,6 @@ purple {
   margin-right: 10px;
 }
 
-.card_picture {
-}
-
 .card_text {
   display: block;
   width: 100%;
@@ -261,7 +263,7 @@ purple {
   color: rgba(197, 191, 237, 1);
 }
 
-.application__box {
+.application__inner {
   display: flex;
   justify-content: space-around;
   padding-bottom: 120px;
