--- a/firstProject/css/style.css
+++ b/firstProject/css/style.css
@@ -90,6 +90,14 @@ button:hover {
 .purpleButton {
   background-color: rgb(108, 95, 188);
   color: rgb(249, 249, 249);
+  border: 1.5px solid rgb(108, 95, 188);
+}
+
+.purpleButton:hover {
+  background-color: rgb(249, 249, 249);
+  color: rgb(96, 96, 96);
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
 .whiteButton {
@@ -615,4 +623,180 @@ purple {
   max-height: 40px;
   position: relative;
   left: 75px;
+  background-color: white;
+}
+
+.dishes_bottom {
+  padding-top: 65px;
+  text-align: end;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 45px;
+  padding-bottom: 120px;
+  border-bottom: 1px solid rgb(203, 203, 203);
+}
+
+.dishes_bottom_text {
+  color: rgb(172, 173, 185);
+}
+
+.dishes_bottom a {
+  text-decoration: none;
+}
+
+.purchase_left_card {
+  position: relative;
+}
+
+.delivered {
+  color: rgb(50, 49, 66);
+}
+
+.canceled {
+  color: rgb(241, 83, 78);
+}
+
+.purchase_inner {
+  padding-top: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.purchase_left {
+  max-width: 560px;
+}
+
+.purchase_left_text {
+  font-size: 53px;
+  font-weight: 700;
+  line-height: 61px;
+  letter-spacing: 0px;
+  text-align: left;
+}
+
+.purchase_left_list {
+  padding-top: 48px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 15px;
+}
+
+.purchase_right {
+  width: 534px;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  padding: 45px 37px;
+  background-color: rgb(255, 255, 255);
+  border: 1.57px solid rgb(237, 242, 247);
+  border-radius: 15px;
+  -webkit-box-shadow: 1px 164px 121px -74px rgba(211, 211, 211, 0.78);
+          box-shadow: 1px 164px 121px -74px rgba(211, 211, 211, 0.78);
+}
+
+.right_information_header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.right_information_header_text {
+  font-size: 28px;
+  font-weight: 800;
+  line-height: 38px;
+  letter-spacing: 0.3141176701px;
+  text-align: left;
+  color: rgb(26, 32, 44);
+}
+
+.right_information_header_select {
+  width: 175.91px;
+  height: 53.4px;
+  padding: 12.56px, 18.85px, 12.56px, 18.85px;
+  border-radius: 12.56px;
+  gap: 6.28px;
+  background-color: rgb(250, 250, 250);
+  font-size: 19px;
+  font-weight: 600;
+  line-height: 28px;
+  letter-spacing: 0.6282353401px;
+  text-align: left;
+  color: rgb(26, 32, 44);
+}
+
+.right_information_main {
+  padding-top: 38px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 22px;
+}
+
+.right_information_main_item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 458.61px;
+  padding: 25.13px;
+  border-radius: 18.85px;
+  border: 1.57px solid rgb(237, 242, 247);
+}
+
+.right_information_main_item_left {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 150px;
+  height: 55px;
+}
+
+.right_information_main_item_right {
+  margin-left: auto;
+}
+
+.item_left_title {
+  font-size: 19px;
+  font-weight: 800;
+  line-height: 28px;
+  letter-spacing: 0.6282353401px;
+  text-align: left;
+  color: rgb(26, 32, 44);
+}
+
+.item_left_subtitle {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.6282353401px;
+  text-align: left;
+  color: rgb(160, 174, 192);
+}
+
+.item_right_price {
+  font-size: 22px;
+  font-weight: 800;
+  line-height: 33px;
+  letter-spacing: 0.3141176701px;
+  text-align: right;
+  color: rgb(26, 32, 44);
 }
