--- a/firstProject/css/style.scss
+++ b/firstProject/css/style.scss
@@ -71,6 +71,14 @@ button:hover {
 .purpleButton {
   background-color: rgba(108, 95, 188, 1);
   color: rgba(249, 249, 249, 1);
+  border: 1.5px solid rgba(108, 95, 188, 1);
+}
+
+.purpleButton:hover {
+  background-color: rgba(249, 249, 249, 1);
+  color: rgba(96, 96, 96, 1);
+
+  transition: 0.4s;
 }
 
 .whiteButton {
@@ -524,4 +532,152 @@ purple {
   max-height: 40px;
   position: relative;
   left: 75px;
+  background-color: white;
+}
+
+.dishes_bottom {
+  padding-top: 65px;
+  text-align: end;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 45px;
+  padding-bottom: 120px;
+  border-bottom: 1px solid rgba(203, 203, 203, 1);
+}
+
+.dishes_bottom_text {
+  color: rgba(172, 173, 185, 1);
+}
+
+.dishes_bottom a {
+  text-decoration: none;
+}
+
+.purchase_left_card {
+  position: relative;
+}
+
+.delivered {
+  color: rgba(50, 49, 66, 1);
+}
+
+.canceled {
+  color: rgba(241, 83, 78, 1);
+}
+
+.purchase_inner {
+  padding-top: 100px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.purchase_left {
+  max-width: 560px;
+}
+
+.purchase_left_text {
+  font-size: 53px;
+  font-weight: 700;
+  line-height: 61px;
+  letter-spacing: 0px;
+  text-align: left;
+}
+
+.purchase_left_list {
+  padding-top: 48px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.purchase_right {
+  width: 534px;
+  height: fit-content;
+  padding: 45px 37px;
+  background-color: rgba(255, 255, 255, 1);
+  border: 1.57px solid rgba(237, 242, 247, 1);
+  border-radius: 15px;
+  box-shadow: 1px 164px 121px -74px rgba(211 211 211 / 78%);
+}
+
+.right_information_header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.right_information_header_text {
+  font-size: 28px;
+  font-weight: 800;
+  line-height: 38px;
+  letter-spacing: 0.3141176700592041px;
+  text-align: left;
+  color: rgba(26, 32, 44, 1);
+}
+
+.right_information_header_select {
+  width: (175.91px);
+  height: (53.4px);
+  padding: 12.56px, 18.85px, 12.56px, 18.85px;
+  border-radius: 12.56px;
+  gap: 6.28px;
+  background-color: rgba(250, 250, 250, 1);
+  font-size: 19px;
+  font-weight: 600;
+  line-height: 28px;
+  letter-spacing: 0.6282353401184082px;
+  text-align: left;
+  color: rgba(26, 32, 44, 1);
+}
+
+.right_information_main {
+  padding-top: 38px;
+  display: flex;
+  flex-direction: column;
+  gap: 22px;
+}
+
+.right_information_main_item {
+  display: flex;
+  width: (458.61px);
+  padding: 25.13px;
+  border-radius: 18.85px;
+  border: 1.57px solid rgba(237, 242, 247, 1);
+}
+
+.right_information_main_item_left {
+  display: flex;
+  flex-direction: column;
+  width: 150px;
+  height: 55px;
+}
+
+.right_information_main_item_right {
+  margin-left: auto;
+}
+
+.item_left_title {
+  font-size: 19px;
+  font-weight: 800;
+  line-height: 28px;
+  letter-spacing: 0.6282353401184082px;
+  text-align: left;
+  color: rgba(26, 32, 44, 1);
+}
+
+.item_left_subtitle {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.6282353401184082px;
+  text-align: left;
+  color: rgba(160, 174, 192, 1);
+}
+
+.item_right_price {
+  font-size: 22px;
+  font-weight: 800;
+  line-height: 33px;
+  letter-spacing: 0.3141176700592041px;
+  text-align: right;
+  color: rgba(26, 32, 44, 1);
 }
