--- a/firstProject/css/style.css
+++ b/firstProject/css/style.css
@@ -800,3 +800,9 @@ purple {
   text-align: right;
   color: rgb(26, 32, 44);
 }
+
+#yellow_form {
+  position: relative;
+  top: 10px;
+  width: 400px;
+}
