--- a/firstProject/css/style.scss
+++ b/firstProject/css/style.scss
@@ -681,3 +681,9 @@ purple {
   text-align: right;
   color: rgba(26, 32, 44, 1);
 }
+
+#yellow_form {
+  position: relative;
+  top: 10px;
+  width: 400px;
+}
