--- a/firstProject/css/style.scss
+++ b/firstProject/css/style.scss
@@ -1,7 +1,26 @@
 body {
   font-family: "Inter", sans-serif;
   font-weight: 500;
-  background-color: rgba(249, 249, 249, 1);
+  background-color: rgb(243, 243, 243, 1);
+}
+
+header {
+  width: 100%;
+}
+
+button {
+  font-family: "Inter", sans-serif;
+  font-weight: 700;
+  width: 120px;
+  height: 63px;
+  border-radius: 17px;
+  font-size: 17px;
+  color: rgba(249, 249, 249, 1);
+  border: none;
+}
+
+button:hover {
+  cursor: pointer;
 }
 
 .container {
@@ -10,14 +29,18 @@ body {
 }
 
 .header {
-  position: sticky;
+  position: fixed;
   top: 0px;
   padding: 30px 0 25px;
-  display: flex;
-  justify-content: space-between;
+  width: 100%;
   border-bottom: 2px solid rgba(203, 203, 203, 1);
   background-color: rgba(249, 249, 249, 1);
   z-index: 9999;
+}
+
+.header__inner {
+  display: flex;
+  justify-content: space-between;
 }
 
 .header__logo {
@@ -35,7 +58,9 @@ body {
 .header__navigation {
   display: flex;
   align-items: center;
-  flex: 1 1 auto;
+  margin-right: auto;
+  margin-left: 105px;
+  margin-right: 445px;
 }
 
 .header__link {
@@ -51,21 +76,6 @@ body {
   list-style-type: none;
   font-size: 18px;
   padding-left: 30px;
-}
-
-button {
-  font-family: "Inter", sans-serif;
-  font-weight: 700;
-  width: 120px;
-  height: 63px;
-  border-radius: 17px;
-  font-size: 17px;
-  color: rgba(249, 249, 249, 1);
-  border: none;
-}
-
-button:hover {
-  cursor: pointer;
 }
 
 .purpleButton {
@@ -95,6 +105,7 @@ button:hover {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  margin-top: 116px;
 }
 
 .box_left {
@@ -569,6 +580,8 @@ purple {
   padding-top: 100px;
   display: flex;
   justify-content: space-between;
+  padding-bottom: 100px;
+  border-bottom: 1px solid rgba(203, 203, 203, 1);
 }
 
 .purchase_left {
@@ -636,12 +649,15 @@ purple {
   gap: 22px;
 }
 
-.right_information_main_item {
-  display: flex;
-  width: (458.61px);
+.item_wrapper {
   padding: 25.13px;
   border-radius: 18.85px;
   border: 1.57px solid rgba(237, 242, 247, 1);
+}
+
+.right_information_main_item {
+  display: flex;
+  width: (458.61px);
 }
 
 .right_information_main_item_left {
@@ -683,7 +699,74 @@ purple {
 }
 
 #yellow_form {
+  content: "";
   position: relative;
-  top: 10px;
-  width: 400px;
+  height: 10px;
+  margin-top: 10px;
+  background-color: rgba(251, 172, 24, 0.2);
+  border-radius: 78.53px;
+}
+
+#yellow_fill {
+  position: relative;
+  background-color: rgba(251, 173, 24, 1);
+  height: 10px;
+  width: 245px;
+  border-radius: 78.53px;
+}
+
+#purple_form {
+  content: "";
+  position: relative;
+  height: 10px;
+  margin-top: 10px;
+  background-color: rgba(108, 95, 188, 0.2);
+  border-radius: 78.53px;
+}
+
+#purple_fill {
+  position: relative;
+  background-color: rgba(108, 95, 188, 1);
+  height: 10px;
+  width: 380px;
+  border-radius: 78.53px;
+}
+
+.customer__wrapper {
+  padding-top: 116px;
+}
+
+.inner__head {
+  text-align: center;
+}
+
+.inner__head-title {
+  font-size: 45px;
+  font-weight: 600;
+  line-height: 26px;
+  letter-spacing: 0px;
+}
+
+.inner__content {
+  padding-top: 80px;
+}
+
+.inner__content-item {
+  display: flex;
+  flex-direction: column;
+  max-width: 528px;
+  padding: 38px 43px;
+  background-color: rgba(255, 255, 255, 1);
+}
+
+.item__header {
+  display: flex;
+}
+
+.item__header-text {
+  display: flex;
+  flex-direction: column;
+  padding-left: 20px;
+  padding-right: 150px;
+  gap: 10px;
 }
