--- a/firstProject/css/style.scss
+++ b/firstProject/css/style.scss
@@ -34,7 +34,7 @@ button:hover {
   padding: 30px 0 25px;
   width: 100%;
   border-bottom: 2px solid rgba(203, 203, 203, 1);
-  background-color: rgba(249, 249, 249, 1);
+  background-color: rgb(243 243 243);
   z-index: 9999;
 }
 
@@ -92,7 +92,7 @@ button:hover {
 }
 
 .whiteButton {
-  background-color: rgba(249, 249, 249, 1);
+  background-color: rgb(243 243 243);
   color: rgba(96, 96, 96, 1);
   border: 1.5px solid rgba(108, 95, 188, 1);
 }
@@ -348,8 +348,6 @@ purple {
 .restaurants_list_item {
   display: flex;
   flex-direction: column;
-  width: 395.99px;
-  height: 297.6px;
   border-radius: 30.02px;
   border: 1.25px;
   gap: 10px;
@@ -365,7 +363,7 @@ purple {
 .item_information {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  padding: 10px;
 }
 
 .item_information_highlight {
@@ -428,6 +426,7 @@ purple {
   position: relative;
   left: 200px;
   bottom: 10px;
+  background-color: white;
 }
 
 .restaurants_bottom {
@@ -751,12 +750,22 @@ purple {
   padding-top: 80px;
 }
 
+.inner__content-list {
+  display: flex;
+  gap: 46px;
+  overflow: hidden;
+}
+
 .inner__content-item {
   display: flex;
   flex-direction: column;
-  max-width: 528px;
   padding: 38px 43px;
   background-color: rgba(255, 255, 255, 1);
+  flex-wrap: wrap;
+  gap: 35px;
+  border-radius: 30px;
+  position: relative;
+  left: -535px;
 }
 
 .item__header {
@@ -767,6 +776,119 @@ purple {
   display: flex;
   flex-direction: column;
   padding-left: 20px;
-  padding-right: 150px;
   gap: 10px;
+  min-width: 150px;
+}
+
+.item__header_quote {
+  margin-left: 144px;
+}
+
+.item__text {
+  font-size: 18px;
+  font-style: italic;
+  font-weight: 400;
+  line-height: 26px;
+  letter-spacing: 0px;
+  text-align: justified;
+  color: rgba(99, 99, 99, 1);
+}
+
+.item__img {
+  width: fit-content;
+}
+
+.slider__form {
+  position: relative;
+  height: 10px;
+  width: 699px;
+  margin-top: 10px;
+  background-color: rgba(108, 95, 188, 0.2);
+  border-radius: 78.53px;
+  margin: 50px auto;
+
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+.slider__scroll {
+  position: relative;
+  background-color: rgb(108, 95, 188);
+  height: 10px;
+  width: 233px;
+  border-radius: 78.53px;
+}
+
+.subscribe {
+  &__inner {
+    background-image: url(/firstProject/images/foods.svg);
+    background-color: rgba(108, 95, 188, 1);
+    margin-top: 100px;
+    width: 1214px;
+    height: 280px;
+    border-radius: 30px;
+    opacity: 0.8px;
+  }
+
+  &__content {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    padding: 37px 66px;
+    gap: 20px;
+
+    &-img {
+      position: absolute;
+      right: 72px;
+      top: 64px;
+      width: 274px;
+    }
+
+    & input {
+      min-width: 300px;
+      min-height: 68px;
+      border-radius: 14.23px;
+      border: 2px solid transparent;
+      background-color: rgba(219, 219, 219, 1);
+      font-size: 16px;
+      line-height: 24px;
+      letter-spacing: 0.03em;
+      text-align: left;
+      padding-left: 22px;
+      font-family: "Inter", sans-serif;
+      font-weight: 500;
+      outline: none;
+      margin: 1px;
+      padding-right: 160px;
+    }
+
+    &-text {
+      font-size: 70px;
+      font-weight: 800;
+      line-height: 105px;
+      color: rgba(255, 255, 255, 1);
+    }
+
+    &-button {
+      position: absolute;
+      right: 2%;
+      font-size: 15px;
+      font-weight: 500;
+      line-height: 22px;
+      letter-spacing: 0.03em;
+      top: 50%;
+      transform: translateY(-50%);
+    }
+  }
+
+  &__input {
+    &-wrapper {
+      position: relative;
+      max-width: fit-content;
+      border: 2px solid transparent;
+      border-radius: 15px;
+      padding: 2px;
+    }
+  }
 }
