--- a/firstProject/css/style.css
+++ b/firstProject/css/style.css
@@ -18,7 +18,6 @@ button {
   color: rgb(249, 249, 249);
   border: none;
 }
-
 button:hover {
   cursor: pointer;
 }
@@ -66,6 +65,66 @@ purple {
   color: rgb(92, 78, 174);
 }
 
+.card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 329px;
+  max-height: 90px;
+  position: relative;
+  border-radius: 10px;
+  background-color: rgb(255, 255, 255);
+  -webkit-box-shadow: -10px 5px 5px rgba(70, 70, 70, 0.05);
+          box-shadow: -10px 5px 5px rgba(70, 70, 70, 0.05);
+  padding: 10px;
+  -webkit-transition: 0.3s ease-out;
+  transition: 0.3s ease-out;
+}
+.card:hover {
+  -webkit-transform: scale(1.2);
+      -ms-transform: scale(1.2);
+          transform: scale(1.2);
+}
+.card img {
+  max-width: 74px;
+  margin-right: 10px;
+}
+.card-text {
+  display: block;
+  width: 100%;
+}
+.card-title {
+  display: block;
+  margin-bottom: 10px;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 22px;
+  letter-spacing: 0px;
+  text-align: left;
+}
+.card-subtitle {
+  display: block;
+  margin-bottom: 10px;
+  font-size: 10px;
+  font-weight: 500;
+  line-height: 14px;
+  letter-spacing: 0px;
+  text-align: left;
+}
+.card-time {
+  display: block;
+  text-align: end;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: end;
+  width: auto;
+  font-size: 11px;
+  font-weight: 500;
+  line-height: 15px;
+  letter-spacing: 0px;
+  color: rgb(172, 173, 185);
+}
+
 .header {
   position: fixed;
   top: 0px;
@@ -91,6 +150,9 @@ purple {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+.header__logo:hover {
+  cursor: pointer;
 }
 .header__logo-text {
   padding-left: 11px;
@@ -125,6 +187,24 @@ purple {
 .header__link {
   color: inherit;
   text-decoration: none;
+  position: relative;
+}
+.header__link::after {
+  width: 0;
+  content: "";
+  display: block;
+  position: absolute;
+  margin-top: 2px;
+  height: 2px;
+  background-color: rgb(108, 95, 188);
+  -webkit-transition: 0.3s ease-out;
+  transition: 0.3s ease-out;
+}
+.header__link:hover {
+  color: rgb(108, 95, 188);
+}
+.header__link:hover:after {
+  width: 100%;
 }
 
 .application {
@@ -229,59 +309,6 @@ purple {
 
 #rating_stars {
   margin: 0 10px 0 20px;
-}
-
-.card {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  max-width: 329px;
-  max-height: 90px;
-  position: relative;
-  border-radius: 10px;
-  background-color: rgb(255, 255, 255);
-  -webkit-box-shadow: -10px 5px 5px rgba(70, 70, 70, 0.05);
-          box-shadow: -10px 5px 5px rgba(70, 70, 70, 0.05);
-  padding: 10px;
-}
-.card img {
-  max-width: 74px;
-  margin-right: 10px;
-}
-.card-text {
-  display: block;
-  width: 100%;
-}
-.card-title {
-  display: block;
-  margin-bottom: 10px;
-  font-size: 16px;
-  font-weight: 600;
-  line-height: 22px;
-  letter-spacing: 0px;
-  text-align: left;
-}
-.card-subtitle {
-  display: block;
-  margin-bottom: 10px;
-  font-size: 10px;
-  font-weight: 500;
-  line-height: 14px;
-  letter-spacing: 0px;
-  text-align: left;
-}
-.card-time {
-  display: block;
-  text-align: end;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: end;
-  width: auto;
-  font-size: 11px;
-  font-weight: 500;
-  line-height: 15px;
-  letter-spacing: 0px;
-  color: rgb(172, 173, 185);
 }
 
 .features {
@@ -418,10 +445,22 @@ purple {
   gap: 10px;
   background-color: rgb(255, 255, 255);
   border: 1.25px solid rgb(244, 244, 246);
+  -webkit-transform: scale(1);
+      -ms-transform: scale(1);
+          transform: scale(1);
+  -webkit-transition: 0.3s ease-out;
+  transition: 0.3s ease-out;
+}
+.restaurants__list-item:hover {
+  -webkit-transform: scale(1.13);
+      -ms-transform: scale(1.13);
+          transform: scale(1.13);
+  z-index: 2;
 }
 .restaurants__list-item img {
   max-width: 395px;
   max-height: 195px;
+  border-radius: 25px;
 }
 .restaurants__list-information {
   display: -webkit-box;
@@ -531,6 +570,13 @@ purple {
   border-radius: 30px;
   -webkit-box-shadow: 6.8484177589px 82.1810150146px 41.0905075073px 0px rgba(229, 229, 229, 0.7);
           box-shadow: 6.8484177589px 82.1810150146px 41.0905075073px 0px rgba(229, 229, 229, 0.7);
+  -webkit-transition: 0.3s ease-out;
+  transition: 0.3s ease-out;
+}
+.dishes__main-item:hover {
+  -webkit-transform: scale(1.2);
+      -ms-transform: scale(1.2);
+          transform: scale(1.2);
 }
 .dishes__main-item-name {
   font-size: 23px;
