--- a/firstProject/css/style.scss
+++ b/firstProject/css/style.scss
@@ -17,12 +17,11 @@ button {
   font-size: 17px;
   color: rgba(249, 249, 249, 1);
   border: none;
-}
 
-button:hover {
-  cursor: pointer;
+  &:hover {
+    cursor: pointer;
+  }
 }
-
 .container {
   max-width: 1246px;
   margin: 0 auto;
@@ -66,6 +65,64 @@ purple {
   color: rgba(92, 78, 174, 1);
 }
 
+.card {
+  display: flex;
+  max-width: 329px;
+  max-height: 90px;
+  position: relative;
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 1);
+  box-shadow: -10px 5px 5px rgba(70, 70, 70, 0.05);
+  padding: 10px;
+  transition: 0.3s ease-out;
+
+  &:hover {
+    transform: scale(1.2);
+  }
+
+  & img {
+    max-width: 74px;
+    margin-right: 10px;
+  }
+
+  &-text {
+    display: block;
+    width: 100%;
+  }
+
+  &-title {
+    display: block;
+    margin-bottom: 10px;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 22px;
+    letter-spacing: 0px;
+    text-align: left;
+  }
+
+  &-subtitle {
+    display: block;
+    margin-bottom: 10px;
+    font-size: 10px;
+    font-weight: 500;
+    line-height: 14px;
+    letter-spacing: 0px;
+    text-align: left;
+  }
+
+  &-time {
+    display: block;
+    text-align: end;
+    align-items: end;
+    width: auto;
+    font-size: 11px;
+    font-weight: 500;
+    line-height: 15px;
+    letter-spacing: 0px;
+    color: rgba(172, 173, 185, 1);
+  }
+}
+
 .header {
   position: fixed;
   top: 0px;
@@ -84,6 +141,10 @@ purple {
     font-weight: 600;
     display: flex;
     align-items: center;
+
+    &:hover {
+      cursor: pointer;
+    }
 
     &-text {
       padding-left: 11px;
@@ -113,6 +174,26 @@ purple {
   &__link {
     color: inherit;
     text-decoration: none;
+    position: relative;
+
+    &::after {
+      width: 0;
+      content: "";
+      display: block;
+      position: absolute;
+      margin-top: 2px;
+      height: 2px;
+      background-color: rgba(108, 95, 188, 1);
+      transition: 0.3s ease-out;
+    }
+
+    &:hover {
+      color: rgba(108, 95, 188, 1);
+
+      &:after {
+        width: 100%;
+      }
+    }
   }
 }
 
@@ -207,59 +288,6 @@ purple {
 
 #rating_stars {
   margin: 0 10px 0 20px;
-}
-
-.card {
-  display: flex;
-  max-width: 329px;
-  max-height: 90px;
-  position: relative;
-  border-radius: 10px;
-  background-color: rgba(255, 255, 255, 1);
-  box-shadow: -10px 5px 5px rgba(70, 70, 70, 0.05);
-  padding: 10px;
-
-  & img {
-    max-width: 74px;
-    margin-right: 10px;
-  }
-
-  &-text {
-    display: block;
-    width: 100%;
-  }
-
-  &-title {
-    display: block;
-    margin-bottom: 10px;
-    font-size: 16px;
-    font-weight: 600;
-    line-height: 22px;
-    letter-spacing: 0px;
-    text-align: left;
-  }
-
-  &-subtitle {
-    display: block;
-    margin-bottom: 10px;
-    font-size: 10px;
-    font-weight: 500;
-    line-height: 14px;
-    letter-spacing: 0px;
-    text-align: left;
-  }
-
-  &-time {
-    display: block;
-    text-align: end;
-    align-items: end;
-    width: auto;
-    font-size: 11px;
-    font-weight: 500;
-    line-height: 15px;
-    letter-spacing: 0px;
-    color: rgba(172, 173, 185, 1);
-  }
 }
 
 .features {
@@ -376,10 +404,18 @@ purple {
       gap: 10px;
       background-color: rgba(255, 255, 255, 1);
       border: 1.25px solid rgba(244, 244, 246, 1);
+      transform: scale(1);
+      transition: 0.3s ease-out;
+
+      &:hover {
+        transform: scale(1.13);
+        z-index: 2;
+      }
 
       & img {
         max-width: 395px;
         max-height: 195px;
+        border-radius: 25px;
       }
     }
 
@@ -489,6 +525,11 @@ purple {
       border-radius: 30px;
       box-shadow: 6.84841775894165px 82.18101501464844px 41.09050750732422px 0px
         rgba(229, 229, 229, 0.7);
+      transition: 0.3s ease-out;
+
+      &:hover {
+        transform: scale(1.2);
+      }
 
       &-name {
         font-size: 23px;
